--- a/template/template.vbproj
+++ b/template/template.vbproj
@@ -212,6 +212,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\Debug\MySql.Data.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="NPOI, Version=2.1.3.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\Debug\NPOI.dll</HintPath>
@@ -319,6 +323,12 @@
       <DependentUpon>Form5.vb</DependentUpon>
     </Compile>
     <Compile Include="Form5.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form6.Designer.vb">
+      <DependentUpon>Form6.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form6.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmAmbilFaktur.designer.vb">
@@ -663,6 +673,18 @@
     <Compile Include="frmTerimaEkspedisiList.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmTotalWithdrawal.Designer.vb">
+      <DependentUpon>frmTotalWithdrawal.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmTotalWithdrawal.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTotalWithdrawalDetail.Designer.vb">
+      <DependentUpon>frmTotalWithdrawalDetail.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmTotalWithdrawalDetail.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmtrKirimEkspedisi.designer.vb">
       <DependentUpon>frmtrKirimEkspedisi.vb</DependentUpon>
     </Compile>
@@ -709,6 +731,12 @@
       <DependentUpon>frmValidUser.vb</DependentUpon>
     </Compile>
     <Compile Include="frmValidUser.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmWithdrawalMarketPlace.designer.vb">
+      <DependentUpon>frmWithdrawalMarketPlace.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmWithdrawalMarketPlace.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="menuValid.Designer.vb">
@@ -789,6 +817,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form5.resx">
       <DependentUpon>Form5.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form6.resx">
+      <DependentUpon>Form6.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmAmbilFaktur.resx">
       <DependentUpon>frmAmbilFaktur.vb</DependentUpon>
@@ -961,6 +992,12 @@
     <EmbeddedResource Include="frmTerimaEkspedisiList.resx">
       <DependentUpon>frmTerimaEkspedisiList.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmTotalWithdrawal.resx">
+      <DependentUpon>frmTotalWithdrawal.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTotalWithdrawalDetail.resx">
+      <DependentUpon>frmTotalWithdrawalDetail.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmtrKirimEkspedisi.resx">
       <DependentUpon>frmtrKirimEkspedisi.vb</DependentUpon>
     </EmbeddedResource>
@@ -984,6 +1021,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmValidUser.resx">
       <DependentUpon>frmValidUser.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmWithdrawalMarketPlace.resx">
+      <DependentUpon>frmWithdrawalMarketPlace.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="menuValid.resx">
       <DependentUpon>menuValid.vb</DependentUpon>
@@ -1025,6 +1065,7 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
