--- a/template/template.vbproj
+++ b/template/template.vbproj
@@ -553,6 +553,12 @@
     <Compile Include="frmMutasi.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmPBYList.Designer.vb">
+      <DependentUpon>frmPBYList.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmPBYList.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmPelunasanHutang.Designer.vb">
       <DependentUpon>frmPelunasanHutang.vb</DependentUpon>
     </Compile>
@@ -967,6 +973,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMutasi.resx">
       <DependentUpon>frmMutasi.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPBYList.resx">
+      <DependentUpon>frmPBYList.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmPelunasanHutang.resx">
       <DependentUpon>frmPelunasanHutang.vb</DependentUpon>
