--- a/template/template.vbproj
+++ b/template/template.vbproj
@@ -583,6 +583,12 @@
     <Compile Include="frmPBYAdd.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmPBYaddPerforma.Designer.vb">
+      <DependentUpon>frmPBYaddPerforma.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmPBYaddPerforma.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmPBYList.Designer.vb">
       <DependentUpon>frmPBYList.vb</DependentUpon>
     </Compile>
@@ -1024,6 +1030,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmPBYAdd.resx">
       <DependentUpon>frmPBYAdd.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPBYaddPerforma.resx">
+      <DependentUpon>frmPBYaddPerforma.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmPBYList.resx">
       <DependentUpon>frmPBYList.vb</DependentUpon>
