--- a/template/template.vbproj
+++ b/template/template.vbproj
@@ -589,6 +589,12 @@
     <Compile Include="frmPBYaddPerforma.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmPBYDetail.Designer.vb">
+      <DependentUpon>frmPBYDetail.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmPBYDetail.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmPBYList.Designer.vb">
       <DependentUpon>frmPBYList.vb</DependentUpon>
     </Compile>
@@ -1033,6 +1039,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmPBYaddPerforma.resx">
       <DependentUpon>frmPBYaddPerforma.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPBYDetail.resx">
+      <DependentUpon>frmPBYDetail.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmPBYList.resx">
       <DependentUpon>frmPBYList.vb</DependentUpon>
