--- a/template/template.vbproj
+++ b/template/template.vbproj
@@ -595,6 +595,12 @@
     <Compile Include="frmPBYDetail.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmPBYexportExcel.Designer.vb">
+      <DependentUpon>frmPBYexportExcel.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmPBYexportExcel.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmPBYList.Designer.vb">
       <DependentUpon>frmPBYList.vb</DependentUpon>
     </Compile>
@@ -1048,6 +1054,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmPBYDetail.resx">
       <DependentUpon>frmPBYDetail.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPBYexportExcel.resx">
+      <DependentUpon>frmPBYexportExcel.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmPBYList.resx">
       <DependentUpon>frmPBYList.vb</DependentUpon>
